# server/routers/modules/users/users.go
@@ -13,6 +13,7 @@ func UseUserRoutes(r *gin.RouterGroup) {
 		userRouters.POST("", controllers.UserController.CreateUser)
 		userRouters.GET("/:id", controllers.UserController.GetUser)
 		userRouters.GET("", controllers.UserController.GetUsers)
+		userRouters.GET("/role/:id", controllers.UserController.GetUserByRoleID)
 		userRouters.PATCH("/:id", controllers.UserController.UpdateUser)
 		userRouters.DELETE("/:id", controllers.UserController.DeleteUser)
 	}
